# SII

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.adoc
Lab1/: 1.tex  report.tex  table.tex  table.txt
Lab1/fig/: tree1.xml
Lab2/: 1.tex  2.tex  3.tex  4.tex  5.tex  CMakeLists.txt  preamble.tex  report.adoc  report.tex  rules.txt  table.tex  table.txt
Lab3/: 1.tex  makefile  report.tex
Lab3/src/: Prog.pro
Lab4/: 1.tex  Makefile  report.tex  report.wsp  trace.tex
Lab4/src/: CMakeLists.txt
Lab4/test/: .gitignore  AttributeTest.h  LogicTest.h  Makefile  ParserTest.h  UtilsTest.h  consts.inc  count.asm  defs.inc  format.c  memory.c  parser.asm  purecall.cpp  segfault.cpp  string.asm  test1.c  test2.asm  test3.asm  test4.cpp
doc/: Makefile  classes.puml
include/: asmdef.h  attribute.h  filemap.h  logic.h  parser.h  utils.h
lib/: CMakeLists.txt  attribute.cpp  filemap.cpp  logic.cpp  parser.cpp  utils.cpp
src/: CMakeLists.txt  c45.cpp  parser.cpp  parser.h  table.cpp  table.h  trace.cpp  trace.h
