cmake_minimum_required(VERSION 3.12)
project(SII)
list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/Modules")
include(CsoiWin)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED on)

if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release)
endif()

include_directories(include)
option(UNICODE "Use UTF-16 strings" ON)
if (UNICODE)
    add_definitions(-D_UNICODE -DUNICODE)
endif()
option(VERBOSE "Print details to text file" OFF)
if (VERBOSE)
    add_definitions(-D_VERBOSE -DVERBOSE)
endif()
set(CMAKE_CXX_FLAGS_DEBUG "-g")
set(CMAKE_EXE_LINKER_FLAGS_RELEASE  "-static -s -Wl,--gc-sections")

add_subdirectory(Lab2/src)
add_subdirectory(Lab4/src)
