set(LIBRARY_NAME logic)
add_library(filemap STATIC filemap.cpp ../include/filemap.h)
target_link_libraries(filemap ${Boost_LIBRARIES})
add_library(parser STATIC ../include/parser.h parser.cpp)
add_library(${LIBRARY_NAME} STATIC ../include/attribute.h attribute.cpp logic.cpp utils.cpp ../include/logic.h ../include/utils.h)
